# pascal_string

./: .gitignore  Cargo.toml  Changelog.md  README.md  license.md
src/: lib.rs  pascal_str.rs  pascal_string.rs
src/ascii/: mod.rs  pascal_str.rs  pascal_string.rs
src/utf8/: mod.rs  pascal_str.rs  pascal_string.rs
